--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -5,10 +5,15 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 img {
   width: 600px;
+  
 }
 
 button {
@@ -16,6 +21,8 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+
+  padding: 8px;
 }
 
 input {
@@ -23,4 +30,35 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+
+  margin: 20px 0 15px 0;
+}
+
+ul{
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  gap: 16px;
+}
+
+a{
+  text-decoration: none;
+  color: hsl(0, 0%, 35%);
+}
+
+.header,
+.footer{
+  display: flex;
+  justify-content: space-between;
+  padding: 15px 20px;
+}
+
+.content{
+  text-align: center;
+}
+
+
+.footer{
+  background-color: hsl(0, 0%, 90%);
 }
